Item Listing with Introduction - Added zoom to image
.item-listing-item {
    overflow:hidden;
    @include breakpoint(medium) {
        &.item-count-2,
        .item-count-4,
        .item-count-6 {
            width: 45%;
        }
    }
    @include breakpoint(large) {
        &.item-count-3,
        .item-count-5 {
            width: 45%;
        }
    }
    @include breakpoint(xlarge) {
        &.item-count-3,
        .item-count-5 {
            width: 29%;
        }
    }
}

.item-listing-item img {
    height: 35rem;
    width: 35rem;
    object-fit: cover;
    transition: 1s all ease-in-out;
    &:hover {
            transform: scale(1.05);
        }
    @include breakpoint(medium) {
        height: 20rem;
    }
    @include breakpoint(large) {
        height: 25rem;
    }
    @include breakpoint(xlarge) {
        height: 30rem;
    }
    @include breakpoint(xxlarge) {
        height: 35rem;
    }
}

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1432,6 +1432,7 @@ figcaption.orbit-caption.caption p {
 }
 
 .item-listing-item {
+    overflow:hidden;
     @include breakpoint(medium) {
         &.item-count-2,
         .item-count-4,
@@ -1455,15 +1456,22 @@ figcaption.orbit-caption.caption p {
 
 .item-listing-item img {
     height: 35rem;
-    width: 100%;
+    width: 35rem;
     object-fit: cover;
+    transition: 1s all ease-in-out;
+    &:hover {
+            transform: scale(1.05);
+        }
     @include breakpoint(medium) {
-        height: 25rem;
+        height: 20rem;
     }
     @include breakpoint(large) {
-        height: 30rem;
+        height: 25rem;
     }
     @include breakpoint(xlarge) {
+        height: 30rem;
+    }
+    @include breakpoint(xxlarge) {
         height: 35rem;
     }
 }
