--- a/view/common/block-layout/item-listing.phtml
+++ b/view/common/block-layout/item-listing.phtml
@@ -21,7 +21,7 @@
 
     <div class="grid-x grid-margin-x flex-container align-spaced">
         <?php foreach ($attachments as $attachment): ?>
-            <div class="cell item-listing-item item resource flex-container flex-dir-column item-count-<?php echo $itemCount; ?>">
+            <div class="item-listing-item item resource flex-container flex-dir-column align-center item-count-<?php echo $itemCount; ?>">
                 <?php
                 $item = $attachment->item();
                 if ($item):
@@ -46,7 +46,7 @@
                 $caption = $attachment->caption();
                 if ($caption):
                     ?>
-                    <div class="caption"><?php echo $caption; ?></div>
+                    <div class="caption padding-1 large-padding-2"><?php echo $caption; ?></div>
                 <?php endif; ?>
             </div>
         <?php endforeach; ?>
