--- a/view/common/block-layout/item-listing.phtml
+++ b/view/common/block-layout/item-listing.phtml
@@ -4,9 +4,9 @@
 
 <div id="block-<?php echo $this->blockId; ?>" class="full-width-css item-listing-with-introduction grid-y grid-margin-y padding-2 region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
     <?php if ($this->hasTitle || $this->hasIntroduction): ?>
-        <div class='item-listing-title-area grid-container padding-bottom-2'>
+        <div class='item-listing-title-area grid-container padding-bottom-2 flex-container flex-dir-column align-middle'>
             <?php if ($this->hasTitle): ?>
-                <h3 class="h2"><?php echo $this->title; ?></h3>
+                <h3 class="h1"><?php echo $this->title; ?></h3>
             <?php endif; ?>
             <?php if ($this->hasIntroduction): ?>
                 <div class='block-introduction medium-padding-2'>
@@ -14,14 +14,14 @@
                 </div>
             <?php endif; ?>
             <?php if ($this->hasButton): ?>
-                <?php printf('<a class="btn" href="%s" alt="%s">%s</a>',$this->buttonPath,$this->buttonText,$this->buttonText); ?>
+                <button class="hollow button secondary large"><?php printf('<a class="btn" href="%s" alt="%s">%s</a>',$this->buttonPath,$this->buttonText,$this->buttonText); ?></button>
             <?php endif; ?>
         </div>
     <?php endif; ?>
 
     <div class="grid-x grid-margin-x flex-container align-spaced">
         <?php foreach ($attachments as $attachment): ?>
-            <div class="item-listing-item item resource flex-container flex-dir-column align-center item-count-<?php echo $itemCount; ?>">
+            <div class="item-listing-item item resource flex-container flex-dir-column align-middle item-count-<?php echo $itemCount; ?>">
                 <?php
                 $item = $attachment->item();
                 if ($item):
@@ -46,7 +46,7 @@
                 $caption = $attachment->caption();
                 if ($caption):
                     ?>
-                    <div class="caption padding-1 large-padding-2"><?php echo $caption; ?></div>
+                    <div class="caption padding-1 large-padding-vertical-2 font-wide"><?php echo $caption; ?></div>
                 <?php endif; ?>
             </div>
         <?php endforeach; ?>
