--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1192,8 +1192,7 @@ body.vertical-menu footer {
 #splash,
 #region-splash {  
     @include breakpoint(large) {
-        height: 90vh;
-        min-height: 700px;
+        min-height: rem-calc(700px);
     }
 }
 
@@ -1514,7 +1513,7 @@ figcaption.orbit-caption.caption p {
 /*Poster*/
 .poster .image-background figure img {  
     width: 100vw;
-    height: 700px;
+    height: rem-calc(700px);
     object-fit: cover;
     opacity: 0.4;
   }
@@ -1695,7 +1694,7 @@ ul.slick-dots li.slick-active button {
     aspect-ratio: 1;
     overflow: hidden;
     height: 70vh;
-    min-height: 700px;
+    min-height: rem-calc(700px);
 }
 
 .slick-slide img.portrait {
@@ -1705,14 +1704,6 @@ ul.slick-dots li.slick-active button {
 .slick-slide img.landscape {
     max-height: 100%;
     width: 100%; 
-}
-
-.slick-slider {
-    width: 100vw;
-    overflow: hidden;
-    @include breakpoint(large) {
-        width: 100%;
-        }
 }
 
 /*Breadcrumbs*/
