Revised Card css

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1745,7 +1745,7 @@ ul.slick-dots li.slick-active button {
 & p {
     color: #fff;
     padding: $global-padding;
-    text-align: left;
+    text-align: center;
     margin-bottom: 0;
 }
 }
