--- a/view/common/header-dropdown.phtml
+++ b/view/common/header-dropdown.phtml
@@ -1,4 +1,4 @@
-<div class="header-uom grid-x grid-padding-x full grid-container flex-container align-middle align-justify">
+<div class="header-uom grid-x grid-padding-x grid-container flex-container align-middle align-justify">
     <div class="university-logo"><a href="http://www.manchester.ac.uk/library"><img
             src="https://assets.manchester.ac.uk/corporate/images/design/logo-university-of-manchester.png"
             alt="The University of Manchester Library logo" /> </a>
