--- a/view/common/block-layout/section-intro-splash.phtml
+++ b/view/common/block-layout/section-intro-splash.phtml
@@ -1,4 +1,4 @@
-<div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x grid-padding-x margin-bottom-1 flex-container section-intro-splash region <?php echo $this->regionClass; ?>  <?php echo $titleSlideTextAlignment ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
+<div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x grid-padding-x margin-bottom-1 flex-container slider-container section-intro-splash region <?php echo $this->regionClass; ?>  <?php echo $titleSlideTextAlignment ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
     <div class="large-5 grid-y grid-padding-y padding-2 title-area background-colour-uom-footer">
         <div class='flex-container flex-dir-column introductory-text'>
             <?php if (!empty($titleSlideTitle)): ?>
@@ -22,10 +22,12 @@
                         $image = preg_match('/alt=""/', $this->thumbnail($media, $this->thumbnailType)) == 1 ? $item->linkRaw($this->thumbnail($media, $this->thumbnailType, ['alt' => $title])) : $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
                 ?>
                       <figure>
+                          <div class="my-slide">
                           <?php echo $image; ?>
                           <?php if ($attachment->caption()): ?>
                             <figcaption class="orbit-caption caption"><?php echo $attachment->caption(); ?></figcaption>
                           <?php endif; ?>
+                          </div>
                       </figure>
                     <?php endif; ?>
                 <?php endif; ?>
